fix: air, nix config changes

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -3,10 +3,9 @@ nixPkgs = ["go", "gcc",  "git"]
 
 [phases.build]
 commands = [
-    "cd src",
     "go mod download",
     "go build -o pdfrepo"
 ]
 
 [start]
-cmd = "./src/pdfrepo"
+cmd = "./pdfrepo"
